# arcaflow-plugin-stressng

./: Dockerfile  README.md  pyproject.toml  stressng_example.yaml
.github/workflows/: carpenter.yaml  workflow.yaml
arcaflow_plugin_stressng/: stressng_plugin.py  stressng_schema.py
configs/: stressng_example.yaml
tests/: reference_jobfile_cpu  reference_jobfile_hdd  reference_jobfile_iomix  reference_jobfile_matrix  reference_jobfile_mmap  reference_jobfile_mq  reference_jobfile_sock  reference_jobfile_vm  test_arcaflow_plugin_stressng.py
